--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>card</title>
-    <link rel="stylesheet" type="text/css" href="C:/users/Drl/desktop/apssdc/dynamic.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
@@ -10,25 +10,25 @@
 <section id="parent">
 
 <section class="child">
-    <img src="images/beauty3.png">
+    <img src="beauty3.png">
     <h4>MEGHANA PULLAGURA</h4>
     <p>meghanapullagura2606@gmail.com</p>
     <p>9876543210</p>
-    <a href="C:/users/Drl/desktop/apssdc/meghana.html">resume</a>
+    <a href="meghana.html">resume</a>
 </section>
  <section class="child">
-    <img src="images/myimage.png">
+    <img src="myimage.png">
     <h4>SAI MANDAVA</h4>
     <p>saimandava.18@gmail.com</p>
     <p>1234567890</p>
-    <a href="C:/users/Drl/desktop/apssdc/sai.html">resume</a>
+    <a href="sai.html">resume</a>
 </section>
 <section class="child">
-    <img src="images/beauty2.png">
+    <img src="beauty2.png">
     <h4>HEMASRIYA DHAMARA</h4>
     <p>hemasriya369@gmail.com</p>
     <p>7654321098</p>
-    <a href="C:/users/Drl/desktop/apssdc/sriya.html">resume</a>
+    <a href="sriya.html">resume</a>
 </section>
     
     
