--- a/sai.html
+++ b/sai.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>card</title>
-	<link rel="stylesheet" type="text/css" href="C:/users/Drl/desktop/apssdc/static.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head/>
 <body>
 
 <main class="main">
 	<section class="left">
-	<img src="images/myimage.png" alt="Divya" width="150" height="150">
+	<img src="myimage.png" alt="Divya" width="150" height="150">
 	<h4>NAME: M.Divya sai</h4>
 	<h4>EMAIL-ID: saimandava.18@gmail.com</h4>
 	<h4>MOBILE: 799361983</h4>
