--- a/sriya.html
+++ b/sriya.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>card</title>
-	<link rel="stylesheet" type="text/css" href="C:/users/Drl/desktop/apssdc/static.css">
+	<link rel="stylesheet" type="text/css" href="style1.css">
 </head/>
 <body>
 
 <main class="main">
 	<section class="left">
-	<img src="images/myimage.png" alt="sriya" width="150" height="150">
+	<img src="bueaty2.png" alt="sriya" width="150" height="150">
 	<h4>NAME: D.sriya</h4>
 	<h4>EMAIL-ID: sriya369@gmail.com</h4>
 	<h4>MOBILE: 7765563253</h4>
