--- a/meghana.html
+++ b/meghana.html
@@ -8,7 +8,7 @@
 
 <main class="main">
 	<section class="left">
-	<img src="myimage.png" alt="Meghana" width="150" height="150">
+	<img src="beauty3.png" alt="Meghana" width="150" height="150">
 	<h4>NAME: P.Meghana</h4>
 	<h4>EMAIL-ID: meghanapullagura2606@gmail.com</h4>
 	<h4>MOBILE: 799361983</h4>
