--- a/sriya.html
+++ b/sriya.html
@@ -8,7 +8,7 @@
 
 <main class="main">
 	<section class="left">
-	<img src="bueaty2.png" alt="sriya" width="150" height="150">
+	<img src="beauty2.png" alt="sriya" width="150" height="150">
 	<h4>NAME: D.sriya</h4>
 	<h4>EMAIL-ID: sriya369@gmail.com</h4>
 	<h4>MOBILE: 7765563253</h4>
